; ModuleID = '/home/carl/AnghaBench/zstd/tests/fuzz/extr_zstd_helpers.c_FUZZ_randomFParams.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/fuzz/extr_zstd_helpers.c_FUZZ_randomFParams.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @FUZZ_randomFParams(%struct.TYPE_3__* noalias sret %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  store i32* %1, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i8* @FUZZ_dataProducer_uint32Range(i32* %4, i32 0, i32 1)
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 2
  store i8* %5, i8** %6, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i8* @FUZZ_dataProducer_uint32Range(i32* %7, i32 0, i32 1)
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 1
  store i8* %8, i8** %9, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i8* @FUZZ_dataProducer_uint32Range(i32* %10, i32 0, i32 1)
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 0
  store i8* %11, i8** %12, align 8
  ret void
}

declare dso_local i8* @FUZZ_dataProducer_uint32Range(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
